--- a/package.json
+++ b/package.json
@@ -1,58 +1,37 @@
 {
-  "private": false,
-  "name": "LIB-NAME",
-  "description": "<<DESCRIPTION>>",
+  "name": "example",
+  "private": true,
   "version": "0.0.0",
-  "main": "./dist/index.js",
-  "module": "./dist/index.es.js",
-  "types": "./dist/types/index.d.ts",
-  "scripts": {
-    "start": "jest --watch",
-    "build": "rollup --config rollup.config.ts --configPlugin typescript",
-    "build:watch": "rollup --watch --config rollup.config.ts --configPlugin typescript",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:publish": "yarn test && yarn build && yarn pack",
-    "prebuild": "yarn clean",
-    "prepublishOnly": "yarn prettier && yarn lint && yarn build",
-    "clean": "rimraf -rf dist/* && rimraf -rf ./*-*.tgz",
-    "format": "yarn prettier && yarn lint",
-    "lint": "eslint . --ext .ts --fix",
-    "lint:dry": "eslint . --ext .ts",
-    "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prettier:dry": "prettier --config .prettierrc 'src/**/*.ts'"
+  "type": "module",
+  "main": "dist/my-element.es.js",
+  "exports": {
+    ".": "./dist/my-element.es.js"
   },
-  "dependencies": {},
-  "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.3",
-    "@swc/core": "^1.2.215",
-    "@swc/jest": "^0.2.21",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^18.0.5",
-    "@types/webrtc": "^0.0.32",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^26.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.3",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.77.0",
-    "rollup-plugin-swc": "^0.2.1",
-    "typescript": "^4.7.4"
-  },
+  "types": "types/my-element.d.ts",
   "files": [
     "dist",
-    "src"
+    "types"
   ],
-  "license": "MIT",
-  "keywords": [],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/<<GIT-USERNAME>>/<<LIB-NAME>>.git"
+  "scripts": {
+    "start": "concurrently \"yarn dev:server\" \"yarn dev:test\"",
+    "dev:server": "vite",
+    "dev:test": "cypress open",
+    "build": "tsc && yarn build:manifest",
+    "build:manifest": "custom-elements-manifest analyze --litelement --globs \"src/**/*.ts\" --outdir \"dist\"",
+    "build:manifest2": "custom-elements-manifest analyze --litelement --globs \"dist/*\""
   },
-  "author": "<<AUTHOR>>"
+  "dependencies": {
+    "cypress": "^10.3.1",
+    "lit": "^2.2.7",
+    "web-component-analyzer": "^2.0.0-next.4"
+  },
+  "devDependencies": {
+    "@custom-elements-manifest/analyzer": "^0.6.3",
+    "@types/chai": "^4.3.1",
+    "cem-plugin-module-file-extensions": "^0.0.5",
+    "concurrently": "^7.3.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.0.0"
+  },
+  "customElements": "custom-elements.json"
 }
